Fix paths in the html to match new dirs, also remove Testimonials

--- a/styles.html
+++ b/styles.html
@@ -15,8 +15,8 @@
 
     <!-- CSS
     ================================================== -->
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/vendor.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/vendor.css">
 
     <style type="text/css" media="screen">
         .s-styles { 
@@ -32,13 +32,13 @@
 
     <!-- script
     ================================================== -->
-    <script defer src="js/vendor/fontawesome/all.min.js"></script>
+    <script defer src="assets/js/vendor/fontawesome/all.min.js"></script>
 
     <!-- favicons
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/icons/favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
 
 </head>
@@ -63,7 +63,6 @@
                     <li><a href="index.html#about">About</a></li>
                     <li><a href="index.html#resume">Resume</a></li>
                     <li><a href="index.html#portfolio">Works</a></li>
-                    <li><a href="index.html#testimonials">Testimonials</a></li>
                     <li><a href="index.html#contact">Say Hello</a></li>
                 </ul>
             </nav>
@@ -405,9 +404,9 @@
                 <h3 class="h-add-bottom">Responsive Image</h3>
 
                 <figure>
-                    <img src="images/wheel-500.jpg" 
-                    srcset="images/wheel-1000.jpg 1000w, 
-                    images/wheel-500.jpg 500w" 
+                    <img src="assets/images/wheel-500.jpg" 
+                    srcset="assets/images/wheel-1000.jpg 1000w, 
+                    assets/images/wheel-500.jpg 500w" 
                     sizes="(max-width: 1000px) 100vw, 1000px" alt="">
 
                     <figcaption>
@@ -793,8 +792,8 @@
 
     <!-- Java Script
     ================================================== -->
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="assets/js/plugins.js"></script>
+    <script src="assets/js/main.js"></script>
 
 </body>
 
