Start to personalize with details, will finish later

--- a/styles.html
+++ b/styles.html
@@ -94,12 +94,11 @@
                     </h3>
 
                     <div class="s-hero__content-social">
-                        <a href="#0"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fab fa-instagram" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fab fa-dribbble" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fab fa-behance" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+                        <a href="#0"><i class="fa fa-book" aria-hidden="true"></i><h7>Publications</h7></a>
+                        <a href="#0"><i class="fab fa-github" aria-hidden="true"></i><h7>GitHub</h7></a>
+                        <a href="#0"><i class="fab fa-linkedin" aria-hidden="true"></i><h7>LinkedIn</h7></a>                        
+			<a href="#0"><i class="fa fa-envelope" aria-hidden="true"></i><h7>Email</h7></a>                  
+			<a href="#0"><i class="fab fa-steam-square" aria-hidden="true"></i><h7>Feats</h7></a>
                     </div>
 
                 </div> <!-- end s-hero__content-about -->
