--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Ceevee 2.0</title>
+    <title>Myung Chang Lee (Noah Lee)</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -73,7 +73,7 @@
 
                 <div class="s-hero__content-about">
 
-                    <h1>I'm Jonathan Doe.</h1>
+                    <h1>Myung Chang Lee (Noah Lee)</h1>
 
                     <h3>
                     I'm a Manila based <span>graphic designer</span>, <span>illustrator</span> and <span>webdesigner</span> creating awesome and
@@ -82,12 +82,11 @@
                     </h3>
 
                     <div class="s-hero__content-social">
-                        <a href="#0"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fab fa-instagram" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fab fa-dribbble" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fab fa-behance" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+                        <a href="https://scholar.google.com/citations?user=2b-WTBwAAAAJ"><i class="fa fa-book" aria-hidden="true"></i><h7>Publications</h7></a>
+                        <a href="https://github.com/noahlee577"><i class="ai ai-researchgate ai-2x" aria-hidden="true"></i><h7>GitHub</h7></a>
+                        <a href="https://www.linkedin.com/in/myungchanglee18/"><i class="fab fa-linkedin" aria-hidden="true"></i><h7>LinkedIn</h7></a>                        
+			<a href="mailto:temp@gmail.co"><i class="fa fa-envelope" aria-hidden="true"></i><h7>Email</h7></a>                  
+			<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><i class="fab fa-steam-square" aria-hidden="true"></i><h7>Feats</h7></a>
                     </div>
 
                 </div> <!-- end s-hero__content-about -->
@@ -116,9 +115,13 @@
                 <img class="s-about__pic" src="assets/images/avatars/user-06.jpg" alt="">
             </div>
             <div class="column large-9 tab-12 s-about__content">
-                <h3>About Me</h3>
+                <h3>About</h3>
                 <p>
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem 
+                I'm a computational biologist interested in . <br> <br>
+
+		Currently, I'm a 
+		
+		Sed ut perspiciatis unde omnis iste natus error sit voluptatem 
                 accusantium doloremque laudantium, totam rem aperiam, eaque ipsa 
                 quae ab illo inventore veritatis et quasi architecto beatae vitae 
                 dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit 
