Made most things larger

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     ================================================== -->
     <meta charset="utf-8">
     <title>Myung Chang Lee (Noah Lee)</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Personal website of Myung Chang Lee (Noah Lee)">
+    <meta name="author" content="Myung Chang Lee (Noah Lee)">
 
     <!-- mobile specific metas
     ================================================== -->
