--- a/styles.html
+++ b/styles.html
@@ -5,9 +5,9 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Styles - Ceevee 2.0</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <title>Myung Chang Lee (Noah Lee)</title>
+    <meta name="description" content="Myung Chang Lee (Noah Lee)">
+    <meta name="author" content="Myung Chang Lee (Noah Lee)">
 
     <!-- mobile specific metas
     ================================================== -->
