--- a/index.html
+++ b/index.html
@@ -171,45 +171,53 @@
             </div>
             <div class="column large-9 tab-12">
                 <div class="resume-block">
-
-                    <div class="resume-block__header">
-                        <h4 class="h3">Dropbox</h4>
-                        <p class="resume-block__header-meta">
-                            <span>Product Designer</span> 
-                            <span class="resume-block__header-date">
-                                August 2019 - Present
-                            </span>
-                        </p>
+                    <div class="resume-block__logo" aria-hidden="true">
+                        <img src="assets/images/icons/Stanford_Cardinal_logo.svg" alt="Stanford Logo" loading="lazy" width="256" height="256">
                     </div>
 
-                    <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore 
-                    vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae 
-                    aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam 
-                    nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
-                    </p>
+                    <div class="resume-block__body">
+                        <div class="resume-block__header">
+                            <h4 class="h3">Dropbox</h4>
+                            <p class="resume-block__header-meta">
+                                <span>Product Designer</span> 
+                                <span class="resume-block__header-date">
+                                    August 2019 - Present
+                                </span>
+                            </p>
+                        </div>
 
+                        <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore 
+                        vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae 
+                        aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam 
+                        nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
+                        </p>
+                    </div>
                 </div> <!-- end resume-block -->
 
                 <div class="resume-block">
-
-                    <div class="resume-block__header">
-                        <h4 class="h3">Facebook</h4>
-                        <p class="resume-block__header-meta">
-                            <span>UI/UX Designer</span> 
-                            <span class="resume-block__header-date">
-                                August 2016 - July 2019
-                            </span>
-                        </p>
+                    <div class="resume-block__logo" aria-hidden="true">
+                        <img src="assets/images/icons/Stanford_Cardinal_logo.svg" alt="Stanford Logo" loading="lazy" width="256" height="256">
                     </div>
 
-                    <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore 
-                    vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae 
-                    aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam 
-                    nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
-                    </p>
+                    <div class="resume-block__body">
+                        <div class="resume-block__header">
+                            <h4 class="h3">Dropbox</h4>
+                            <p class="resume-block__header-meta">
+                                <span>Product Designer</span> 
+                                <span class="resume-block__header-date">
+                                    August 2019 - Present
+                                </span>
+                            </p>
+                        </div>
 
+                        <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore 
+                        vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae 
+                        aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam 
+                        nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
+                        </p>
+                    </div>
                 </div> <!-- end resume-block -->
             </div>
         </div> <!-- s-resume__section -->
@@ -221,45 +229,78 @@
             </div>
             <div class="column large-9 tab-12">
                 <div class="resume-block">
-
-                    <div class="resume-block__header">
-                        <h4 class="h3">University of Life</h4>
-                        <p class="resume-block__header-meta">
-                            <span>Master in Graphic Design</span> 
-                            <span class="resume-block__header-date">
-                                April 2015
-                            </span>
-                        </p>
+                    <div class="resume-block__logo" aria-hidden="true">
+                        <img src="assets/images/icons/Stanford_Cardinal_logo.svg" alt="Stanford Logo" loading="lazy" width="256" height="256">
                     </div>
 
-                    <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore 
-                    vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae 
-                    aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam 
-                    nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
-                    </p>
+                    <div class="resume-block__body">
+                        <div class="resume-block__header">
+                            <h4 class="h3">Dropbox</h4>
+                            <p class="resume-block__header-meta">
+                                <span>Product Designer</span> 
+                                <span class="resume-block__header-date">
+                                    August 2019 - Present
+                                </span>
+                            </p>
+                        </div>
 
+                        <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore 
+                        vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae 
+                        aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam 
+                        nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
+                        </p>
+                    </div>
                 </div> <!-- end resume-block -->
 
                 <div class="resume-block">
-
-                    <div class="resume-block__header">
-                        <h4 class="h3">School of Cool Designers</h4>
-                        <p class="resume-block__header-meta">
-                            <span>B.A. Degree in Graphic Design</span> 
-                            <span class="resume-block__header-date">
-                                August 2012
-                            </span>
-                        </p>
+                    <div class="resume-block__logo" aria-hidden="true">
+                        <img src="assets/images/icons/Stanford_Cardinal_logo.svg" alt="Stanford Logo" loading="lazy" width="256" height="256">
                     </div>
 
-                    <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore 
-                    vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae 
-                    aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam 
-                    nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
-                    </p>
+                    <div class="resume-block__body">
+                        <div class="resume-block__header">
+                            <h4 class="h3">Dropbox</h4>
+                            <p class="resume-block__header-meta">
+                                <span>Product Designer</span> 
+                                <span class="resume-block__header-date">
+                                    August 2019 - Present
+                                </span>
+                            </p>
+                        </div>
 
+                        <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore 
+                        vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae 
+                        aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam 
+                        nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
+                        </p>
+                    </div>
+                </div> <!-- end resume-block -->
+
+                <div class="resume-block">
+                    <div class="resume-block__logo" aria-hidden="true">
+                        <img src="assets/images/icons/Stanford_Cardinal_logo.svg" alt="Stanford Logo" loading="lazy" width="256" height="256">
+                    </div>
+
+                    <div class="resume-block__body">
+                        <div class="resume-block__header">
+                            <h4 class="h3">Dropbox</h4>
+                            <p class="resume-block__header-meta">
+                                <span>Product Designer</span> 
+                                <span class="resume-block__header-date">
+                                    August 2019 - Present
+                                </span>
+                            </p>
+                        </div>
+
+                        <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore 
+                        vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae 
+                        aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam 
+                        nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
+                        </p>
+                    </div>
                 </div> <!-- end resume-block -->
             </div>
         </div> <!-- s-resume__section -->
