--- a/index.html
+++ b/index.html
@@ -400,20 +400,18 @@
 
                     <div class="resume-block__body">
                         <div class="resume-block__header">
-                            <h4 class="h3">Dropbox</h4>
+                            <h4 class="h3">Genentech</h4>
                             <p class="resume-block__header-meta">
-                                <span>Product Designer</span> 
+                                <span>Post Doctorate Scientist</span> 
                                 <span class="resume-block__header-date">
-                                    August 2019 - Present
+                                    August 2023 - Present
                                 </span>
                             </p>
                         </div>
 
                         <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore 
-                        vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae 
-                        aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam 
-                        nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
+                        Mentors: Dr. Barzin Nabet and Dr. Robert Johnston
+
                         </p>
                     </div>
                 </div> <!-- end resume-block -->
@@ -458,20 +456,20 @@
 
                     <div class="resume-block__body">
                         <div class="resume-block__header">
-                            <h4 class="h3">Dropbox</h4>
+                            <h4 class="h3">Stanford University</h4>
                             <p class="resume-block__header-meta">
-                                <span>Product Designer</span> 
+                                <span>Ph.D. in Cancer Biology</span> 
                                 <span class="resume-block__header-date">
-                                    August 2019 - Present
+                                    September 2018 - June 2023
                                 </span>
                             </p>
                         </div>
 
                         <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore 
-                        vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae 
-                        aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam 
-                        nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
+                        Thesis: <a href="https://www.proquest.com/openview/04b177c4d9224c3b0f352b0a72260912/1">Investigating Genetic and 
+                        Cellular Determinants of Small Cell Lung Cancer Initiation and Progression</a><br>
+                        Thesis Advisor: Dr. Julien Sage<br>
+                        Thesis Committee: Dr. Monte Winslow, Dr. Erinn Rankin, Dr. Paul Khavari
                         </p>
                     </div>
                 </div> <!-- end resume-block -->
@@ -483,45 +481,42 @@
 
                     <div class="resume-block__body">
                         <div class="resume-block__header">
-                            <h4 class="h3">Dropbox</h4>
+                            <h4 class="h3">Stanford University</h4>
                             <p class="resume-block__header-meta">
-                                <span>Product Designer</span> 
+                                <span>M.S. in Cancer Biology</span> 
                                 <span class="resume-block__header-date">
-                                    August 2019 - Present
+                                    September 2018 - April 2021
                                 </span>
                             </p>
                         </div>
 
                         <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore 
-                        vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae 
-                        aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam 
-                        nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
+                        Same as above, got this degree for Green Card purposes :)))))
                         </p>
                     </div>
                 </div> <!-- end resume-block -->
 
                 <div class="resume-block">
                     <div class="resume-block__logo" aria-hidden="true">
-                        <img src="assets/images/icons/Stanford_Cardinal_logo.svg" alt="Stanford Logo" loading="lazy" width="256" height="256">
+                        <img src="assets/images/icons/Dartmouth-College-Logo.png" alt="Dartmouth Logo" loading="lazy" width="512" height="512">
                     </div>
 
                     <div class="resume-block__body">
                         <div class="resume-block__header">
-                            <h4 class="h3">Dropbox</h4>
+                            <h4 class="h3">Dartmouth College</h4>
                             <p class="resume-block__header-meta">
-                                <span>Product Designer</span> 
+                                <span>A.B. in Biological Sciences (High Honors, cum laude)</span> 
                                 <span class="resume-block__header-date">
-                                    August 2019 - Present
+                                    September 2014 - June 2018
                                 </span>
                             </p>
                         </div>
 
                         <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore 
-                        vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae 
-                        aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam 
-                        nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
+                        Thesis: <a href="https://www.researchgate.net/publication/325756004_Benztropine_sensitizes_glioma_cells_to_temozolomide">Benztropine 
+                        sensitizes glioma cells to temozolomide</a><br>
+                        Honors Thesis Advisors: Dr. Damian Almiron-Bonnin, Dr. Matthew Havrda, and Dr. Mark Israel
+
                         </p>
                     </div>
                 </div> <!-- end resume-block -->
