--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                     <h3>
                     I'm SF Bay Area based <span>bioinformatician</span>, <span>data scientist</span>, and <span>cancer biologist</span> researching cancer
-                    to understand the <span>basic circuitries driving cell biology</span> and to <span>improve clinical outcomes for patients</span>. 
+                    to <span>understand the basic circuitries driving cell biology</span> and to <span>improve clinical outcomes for patients</span>. 
                     <br><br>
                     <a class="smoothscroll" href="#about">Scroll</a> to learn a little bit more about me.
                     </h3>
@@ -86,8 +86,8 @@
                         <a href="https://scholar.google.com/citations?user=2b-WTBwAAAAJ"><i class="fa fa-book" aria-hidden="true"></i><h7>Publications</h7></a>
                         <a href="https://github.com/noahlee577"><i class="fab fa-github" aria-hidden="true"></i><h7>GitHub</h7></a>
                         <a href="https://www.linkedin.com/in/myungchanglee18/"><i class="fab fa-linkedin" aria-hidden="true"></i><h7>LinkedIn</h7></a>                        
-			<a href="#contact"><i class="fa fa-envelope" aria-hidden="true"></i><h7>Email</h7></a>                  
-			<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><i class="fab fa-steam-square" aria-hidden="true"></i><h7>Feats</h7></a>
+			            <a href="#contact"><i class="fa fa-envelope" aria-hidden="true"></i><h7>Contact</h7></a>                  
+			            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><i class="fab fa-steam-square" aria-hidden="true"></i><h7>Feats</h7></a>
                     </div>
 
                 </div> <!-- end s-hero__content-about -->
@@ -139,7 +139,7 @@
                 For now, I am working to coalesce the two passions of mine—curing more patients and understanding the biological 
                 operating system—into a lifetime of work that would be pleasing to God.
                 <br>
-                If either of my passions (or any other items above) resonates with you, I'd love to connect and learn more your take on it, too.
+                If any of my passions resonates with you, I'd love to connect and learn more your take on it, too.
                 </p>
 
                 <hr>
@@ -155,11 +155,31 @@
                         
                     </div>
                     <div class="column w-1000-stack">
-                        <a href="https://www.linkedin.com/in/myungchanglee18/" class="btn btn--download">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:"><path d="M12 16L16 11 13 11 13 4 11 4 11 11 8 11z"></path><path d="M20,18H4v-7H2v7c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2v-7h-2V18z"></path></svg>
+                        <a href="https://www.linkedin.com/in/myungchanglee18/" class="btn btn--contact">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:" aria-label="LinkedIn">
+                                <path d="M22.225 0H1.771C.792 0 0 .774 0 1.728v20.543C0 23.225.792 24 1.771 24h20.451C23.2 24 24 23.225 24 22.271V1.728C24 .774 23.2 0 22.225 0zM6.895 20.452H3.78V9h3.115v11.452zM5.337 7.433c-1.144 0-2.068-.926-2.068-2.068 0-1.143.924-2.068 2.068-2.068 1.142 0 2.068.925 2.068 2.068 0 1.142-.926 2.068-2.068 2.068zM20.452 20.452h-3.554V14.83c0-1.339-.028-3.063-1.867-3.063-1.868 0-2.154 1.459-2.154 2.967v5.718H9.323V9h3.414v1.561h.049c.476-.9 1.637-1.848 3.369-1.848 3.602 0 4.268 2.37 4.268 5.455v6.284z"></path>
+                            </svg>
+
                             Connect with me via LinkedIn
                         </a>
+                        <a href="#contact" class="btn btn--contact">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:" aria-label="Google Form">
+                              <!-- page + folded corner -->
+                              <path d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V8l-6-6zM14 3.5L18.5 8H14V3.5z"></path>
+                              <!-- bullets -->
+                              <circle cx="7" cy="9" r="1"></circle>
+                              <circle cx="7" cy="13" r="1"></circle>
+                              <circle cx="7" cy="17" r="1"></circle>
+                              <!-- lines -->
+                              <rect x="9.5" y="8" width="8" height="2" rx=".5"></rect>
+                              <rect x="9.5" y="12" width="8" height="2" rx=".5"></rect>
+                              <rect x="9.5" y="16" width="8" height="2" rx=".5"></rect>
+                            </svg>
+
+                            Contact me via a Form
+                        </a>
                     </div>
+
                 </div>
             </div>
         </div> <!-- end row -->
@@ -576,7 +596,6 @@
     <!-- contact
     ================================================== -->
     <section id="contact" class="s-contact target-section">
-
         <div class="row s-contact__header">
             <div class="column large-12">
                 <h3 class="section-header-allcaps">Say Hello</h3>
@@ -584,45 +603,16 @@
         </div>
 
         <div class="row s-contact__content">
-
-            <div class="column large-7 medium-12">
-
-                <h4 class="huge-text">
-                Have a new project in mind? Let's collaborate and build something awesome. 
-                Let's turn that idea to an even greater product :)
-                </h4>
-
-            </div>
-
-            <div class="column large-4 medium-12">
-
-                <div class="row contact-infos">
-                    <div class="column large-12 medium-6 tab-12">
-                        <div class="contact-block">
-                            <h5 class="contact-block__header">
-                                Email
-                            </h5>
-                            <p class="contact-block__content">
-                                <a class="mailtoui" href="mailto:sayhello@ceevee.com">sayhello@ceevee.com</a>
-                            </p>
-                        </div> <!-- end contact-block -->
-                    </div>
-                    <div class="column large-12 medium-6 tab-12">
-                        <div class="contact-block">
-                            <h5 class="contact-block__header">
-                                Phone
-                            </h5>
-                            <p class="contact-block__content">
-                                <a href="tel:+1975432345">+197 543 2345</a>
-                            </p>
-                        </div> <!-- end contact-block -->
-                    </div>
-
-                    <div class="column large-12">
-                        <a href="mailto:sayhello@ceevee.com" class="mailtoui btn btn--primary h-full-width">Let's Talk</a>
-                    </div>
-                </div> <!-- end contact-infos -->
-
+            <div class="column large-12">
+                <iframe 
+                    src="https://docs.google.com/forms/d/e/1FAIpQLSf-fmS74L9JVgg6PA_PcVA1DoWXuB0Kjet5mirmnL104bSAnA/viewform?embedded=true" 
+                    width="100%" 
+                    height="1009" 
+                    frameborder="0" 
+                    marginheight="20" 
+                    marginwidth="0">
+                    Loading Form…
+                </iframe>
             </div>
         </div> <!-- s-contact__content -->
 
@@ -635,11 +625,11 @@
         <div class="row">
             <div class="column large-4 medium-6 w-1000-stack s-footer__social-block">
                 <ul class="s-footer__social">
-                    <li><a href="#0"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-                    <li><a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="#0"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-                    <li><a href="#0"><i class="fab fa-dribbble" aria-hidden="true"></i></a></li>
-                    <li><a href="#0"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
+                    <li><a href="https://scholar.google.com/citations?user=2b-WTBwAAAAJ"><i class="fa fa-book" aria-hidden="true"></i></a></li>
+                    <li><a href="https://github.com/noahlee577"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/myungchanglee18/"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
+                    <!-- <li><a href="#contact"><i class="fa fa-envelope" aria-hidden="true"></i></a></li> -->
+                    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><i class="fab fa-steam-square" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
 
