Revamped Resume section, adding a lot of subsections and relevant info

--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                     </div>
                 </div> <!-- end resume-block -->
             </div>
-        </div> <!-- s-resume__section -->
+        </div> <!-- s-resume__section Work Experience -->
 
 
         <div class="row s-resume__section">
@@ -541,54 +541,254 @@
                     </div>
                 </div> <!-- end resume-block -->
             </div>
-        </div> <!-- s-resume__section -->
-
+        </div> <!-- s-resume__section Education -->
 
         <div class="row s-resume__section">
             <div class="column large-3 tab-12">
-                <h3 class="section-header-allcaps">Skills</h3>
+                <h3 class="section-header-allcaps">Teaching and Mentorship</h3>
             </div>
             <div class="column large-9 tab-12">
-                <div class="resume-block">
-
-                    <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore 
-                    vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae 
-                    aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam 
-                    nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
+                <div class="resume-block__header">
+                    <p class="resume-block__header-meta-no-logo">
+                        <span><b>Mentor</b>, Various Organizations</span> 
+                        <span class="resume-block__header-date">
+                        Various
+                        </span>
                     </p>
-
-                    <ul class="skill-bars-fat">
-                        <li>
-                        <div class="progress percent85"></div>
-                        <strong>HTML</strong>
-                        </li>
-                        <li>
-                        <div class="progress percent85"></div>
-                        <strong>CSS</strong>
-                        </li>
-                        <li>
-                        <div class="progress percent65"></div>
-                        <strong>Javascript</strong>
-                        </li>
-                        <li>
-                        <div class="progress percent90"></div>
-                        <strong>Figma</strong>
-                        </li>
-                        <li>
-                        <div class="progress percent75"></div>
-                        <strong>Illustrator</strong>
-                        </li>
-                        <li>
-                        <div class="progress percent60"></div>
-                        <strong>Photoshop</strong>
-                        </li>
-                    </ul>
-
-                </div> <!-- end resume-block -->
-
+                </div>
+                <p>
+                <li>Sevahn Vorperian (October 2024 - Present; Postdoc), Postdoc Peer Mentoring Program at Genentech</li>
+                <li>Andrew Hong (September 2023 - Present; MD/PhD), Korean American Society in Biotech and Pharmaceuticals (KASBP) Mentorship Program</li>
+                <li>Ricardo Mack (October 2019 - June 2020; PhD), Stanford Biosciences Student Association (SBSA) First-Year Mentorship Program</li>
+                <li>Arthur Mensah (September 2015 - June 2016), Agape Christian Fellowship at Dartmouth College</li>
+                </p>
+                <div class="resume-block__header">
+                    <p class="resume-block__header-meta-no-logo">
+                        <span><b>Biology Resident Expert</b>, Academic Skills Center at Dartmouth College</span> 
+                        <span class="resume-block__header-date">
+                        September 2016 - June 2018
+                        </span>
+                    </p>
+                </div>
+                <p>
+                <li>Served as the Resident Expert in Biology for West House residents.</li>
+                <li>Worked under Academic Skill Center to provide academic help to students.</li>
+                <li>Held weekly office hours where students could drop by to ask questions.</li>
+                <li>Maintained attendance records of students who utilized office hours.</li>
+                </p>
+                <div class="resume-block__header">
+                    <p class="resume-block__header-meta-no-logo">
+                        <span><b>Tutor</b>, Academic Skills Center at Dartmouth College</span> 
+                        <span class="resume-block__header-date">
+                        September 2015 - December 2015
+                        </span>
+                    </p>
+                </div>
+                <p>
+                <li>Served as a study group leader for cell biology (BIOL 12).</li>
+                <li>Worked closely with professors to solidify students' understanding of cell biology.</li>
+                <li>Prepared PowerPoint slides every week with thought-provoking practice questions about the lecture material.</li>
+                <li>Facilitated exam review sessions.</li>
+                </p>
+                <div class="resume-block__header">
+                    <p class="resume-block__header-meta-no-logo">
+                        <span><b>Study Group Leader</b>, Academic Skills Center at Dartmouth College</span> 
+                        <span class="resume-block__header-date">
+                        September 2014 - March 2018
+                        </span>
+                    </p>
+                </div>
+                <p>
+                <li>Tutored students in Calculus (MATH 3, during fall of 2014), Cell Structure and Function (BIOL 12, during fall of 2016), Honors Organic Chemistry (CHEM 57, during winter of 2017), Molecular Biology (BIOL 45, summer of 2017), and General Chemistry (CHEM 5, during winter of 2018).</li>
+                </p>
+                <div class="resume-block__header">
+                    <p class="resume-block__header-meta-no-logo">
+                        <span><b>Teaching Assistant</b>, ALTO Education</span> 
+                        <span class="resume-block__header-date">
+                        June 2014 - August 2014
+                        </span>
+                    </p>
+                </div>
+                <p>
+                <li>Taught English grammar and idioms to high school students.</li> 
+                <li>Administered and scored quizzes and SAT mock tests.</li>
+                <li>Graded essays and homework assignments, maintained score and attendance data using Excel and Google Spreadsheets.</li>
+                </p>
             </div>
-        </div> <!-- s-resume__section -->
+        </div> <!-- s-resume__section Teaching Experience -->
+
+        <div class="row s-resume__section">
+            <div class="column large-3 tab-12">
+                <h3 class="section-header-allcaps">Leadership and Volunteering</h3>
+            </div>
+            <div class="column large-9 tab-12">
+                <div class="resume-block__header">
+                    <p class="resume-block__header-meta-no-logo">
+                        <span><b>President</b>, Korean Bible Study and Koinonia (KBSK), Stanford University</span> 
+                        <span class="resume-block__header-date">
+                        September 2018 - June 2023
+                        </span>
+                    </p>
+                </div>
+                <p>
+                <li>During tenure as President (June 2021 - June 2023), ensured compliance with Stanford Associated Religions (SAR) / 
+                Office for Religious & Spiritual Life (ORSL) regulations by amending the constitution, 
+                registering the organization/events on CardinalEngage, and attending required governance meetings (1:1s and quarterly check-ins).</li>
+                </p>
+                <div class="resume-block__header">
+                    <p class="resume-block__header-meta-no-logo">
+                        <span><b>Member</b>, Stanford Science PenPals</span> 
+                        <span class="resume-block__header-date">
+                        September 2018 - June 2023
+                        </span>
+                    </p>
+                </div>
+                <p>
+                <li>Served as a penpal, connecting with middle- and high-schoolers across the U.S. and Spain.</li>
+                <li>Sent ?? letters to 11 students (usually 1~3 students per year)</li>
+                </p>
+                <div class="resume-block__header">
+                    <p class="resume-block__header-meta-no-logo">
+                        <span><b>Ad-hoc Reviewer</b>, Multiple Journals</span> 
+                        <span class="resume-block__header-date">
+                        June 2018 - Present
+                        </span>
+                    </p>
+                </div>
+                <p>
+                <li>Reviewed 2 manuscripts for <i>PLOS ONE</i>.</li>
+                <li>Reviewed 1 manuscript for <i>Pharmacology & Therapeutics</i>.</li>
+                </p>
+                <div class="resume-block__header">
+                    <p class="resume-block__header-meta-no-logo">
+                        <span><b>Secretary/Risk Manager</b>, Zeta Psi Fraternity, Psi Epsilon Chapter at Dartmouth College</span> 
+                        <span class="resume-block__header-date">
+                        June 2016 - June 2018
+                        </span>
+                    </p>
+                </div>
+                <p>
+                <li>As Secretary (June - September 2016), attended executive meetings and sent out meeting minutes.</li>
+                <li>As Risk Manager (June - September 2016 and March 2017 - June 2018), worked with Office of Greek Letter Organizations and Societies (GLOS) (now Office of Greek Life and Student Societies - GLASS)
+                to author the first, chapter-wide Risk Management Policy.</li>
+                <li>Also as Risk Manager, organized door duty and conducted walkthroughs to ensure event safety; received certification for eTIPS On Premise 3.0.</li>
+                </p>
+                <div class="resume-block__header">
+                    <p class="resume-block__header-meta-no-logo">
+                        <span><b>Musical Director</b>, X.ado at Dartmouth College</span> 
+                        <span class="resume-block__header-date">
+                        September 2015 - June 2018
+                        </span>
+                    </p>
+                </div>
+                <p>
+                <li>Led rehearsals/auditions/performances and directed musical efforts as the Musical Pitch (March 2017 - June 2018).</li>
+                <li>Organized the first international tour (to South Korea), coordinating both logistics as well as securing performance venues.</li>
+                <li>Unified folder structure and file ownership to the official account on Google Drive.</li>
+                <li>(Co-)created four new arrangements.</li>
+                </p>
+                <div class="resume-block__header">
+                    <p class="resume-block__header-meta-no-logo">
+                        <span><b>Explorer</b>, Cascade Fire Department</span> 
+                        <span class="resume-block__header-date">
+                        September 2011 - June 2014
+                        </span>
+                    </p>
+                </div>
+                <p>
+                <li>Responded to medical emergencies, PI accidents, house fires, vehicle fires and rollovers, carbon monoxide alarms, fire alarms, 
+                wires down, airport alerts and emergencies, and illegal burn reports.</li>
+                <li>Logged 348 hours in service.</li>
+                <li>Participated in community events for fire safety awareness and training.</li>
+                <li>Attended training sessions and kept certifications up to date, earning AHA First Aid CPR/AED license.</li>
+                </p>
+            </div>
+        </div> <!-- s-resume__section Leadership and Volunteer Experience -->
+
+        <div class="row s-resume__section">
+            <div class="column large-3 tab-12">
+                <h3 class="section-header-allcaps">Selected Honors and Awards</h3>
+            </div>
+            <div class="column large-9 tab-12">
+                <ul class="resume-block__year_item" role="list">
+                    <li>
+                        <span class="year">2022–2023</span>
+                        <span class="desc">Tobacco-Related Disease Research Program Predoctoral Fellowship (UC Office of the President)</span>
+                    </li>
+                    <li>
+                        <span class="year">2018–2021</span>
+                        <span class="desc">Stanford Graduate Fellowship in Science & Engineering. Awarded to ~100 doctoral students in science and engineering following nomination by the degree program. Provided full tuition and stipend support.</span>
+                    </li>
+                    <li>
+                        <span class="year">2018</span>
+                        <span class="desc">Certificate of Appreciation in recognition of valuable contribution to Tutor Clearinghouse, Academic Skills Center (Dartmouth College)</span>
+                    </li>
+                    <li>
+                        <span class="year">2018</span>
+                        <span class="desc">Charles S. Fleet 1953 Prize (Dartmouth College), for serving as President of Dartmouth Glee Club</span>
+                    </li>
+                    <li>
+                        <span class="year">2017</span>
+                        <span class="desc">William H. Neukom 1964 Scholar (Neukom Institute). Awarded twice, providing quarterly stipend support for part-time research applying computational methods to study cancer</span>
+                    </li>
+                    <li>
+                        <span class="year">2017–2018</span>
+                        <span class="desc">Zeta Psi Educational Foundation Scholarship. Selected as one of 75 recipients across the U.S. each semester; awarded three times, including once as a top 2–3 recipient with a larger award</span>
+                    </li>
+                    <li>
+                        <span class="year">2017</span>
+                        <span class="desc">Order of Omega Honor Society. Inducted for exemplary scholarship and leadership (top 3% of Dartmouth undergraduates)</span>
+                    </li>
+                    <li>
+                        <span class="year">2016</span>
+                        <span class="desc">James O. Freedman Presidential Scholar (Dartmouth College)</span>
+                    </li>
+                    <li>
+                        <span class="year">2015</span>
+                        <span class="desc">Citations for Meritorious Performance (Dartmouth College). Formal commendations from faculty for exceptional course contributions; received three times in distinct departments</span>
+                    </li>
+                    <li>
+                        <span class="year">2014–2018</span>
+                        <span class="desc">Miriam H. &amp; S. Sidney Stoneman Scholarship Fund, covering full tuition (Dartmouth College)</span>
+                    </li>
+                    <li>
+                        <span class="year">2012–2014</span>
+                        <span class="desc">Michigan Math Prize Finalist (Top 200 in 2013)</span>
+                    </li>
+                </ul>
+            </div>
+        </div> <!-- s-resume__section Honors and Awards -->
+
+        <div class="row s-resume__section">
+            <div class="column large-3 tab-12">
+                <h3 class="section-header-allcaps">Selected Presentations</h3>
+            </div>
+            <div class="column large-9 tab-12">
+                <ul class="resume-block__year_item" role="list">
+                    <li>
+                        <span class="year">November 2024</span>
+                        <span class="desc">"Identifying proliferative and immune-modulatory drivers of small cell lung cancer (SCLC)": <b>gRED Research Open House</b>; South San Francisco, CA.</span>
+                    </li>
+                    <li>
+                        <span class="year">October 2024</span>
+                        <span class="desc">"Identifying proliferative and immune-modulatory drivers of small cell lung cancer (SCLC)": <b>AACR Special Conference in Tumor Immunology and Immunotherapy</b>; Boston, MA.</span>
+                    </li>
+                    <li>
+                        <span class="year">September 2024</span>
+                        <span class="desc">"Leveraging your Post Graduate Training to Pivot to Industry": <b>Stanford Cancer Institute, Comprehensive Cancer Research Training Program</b>; Redwood City, CA.</span>
+                    </li>
+                    <li>
+                        <span class="year">November 2021</span>
+                        <span class="desc">"A CRISPR/Cas9 gene knockout approach to identify cancer drivers in small cell lung cancer in vivo": <b>Stanford Cancer Biology Annual Retreat</b>; San Jose, CA.</span>
+                    </li>
+                    <li>
+                        <span class="year">November 2017</span>
+                        <span class="desc">"Construction of a robust bacterial plasmid for ethanol production": <b>iGEM 2017 Giant Jamboree</b>; Boston, MA.</span>
+                    </li>
+                </ul>
+            </div>
+        </div> <!-- s-resume__section Selected Presentations -->
+
 
     </section> <!-- end s-resume -->
 
