Reworked the portfolio section a little bit, still need to work on the sizing

--- a/index.html
+++ b/index.html
@@ -202,26 +202,30 @@
         <!-- CARD 01 -->
         <article class="portfolio-card reveal-on-scroll">
             <a class="portfolio-figure js-open-modal" href="#modal-01" data-modal="modal-01" aria-label="Open details for Droplet">
-                <img loading="lazy" src="assets/images/portfolio/droplet.jpg"
-                srcset="assets/images/portfolio/droplet.jpg 1x, assets/images/portfolio/droplet@2x.jpg 2x"
-                alt="Graphical abstract for ‘Droplet’ showing microfluidic droplet assay." />
+                <img loading="lazy" src="assets/images/portfolio/Nabet et al. Cancer Cell 2024 Graphical Abstract.jpg"
+                srcset="assets/images/portfolio/Nabet et al. Cancer Cell 2024 Graphical Abstract@2x.jpg 2x"
+                alt="Graphical abstract for NMF ." />
                 <span class="figure-cta">View figure & details</span>
             </a>
             <div class="portfolio-info">
-                <h4 class="portfolio-title">Microfluidic Droplet Assay for High-Throughput Screening</h4>
+                <h4 class="portfolio-title">Analysis of Phase III clinical trial biomarker data for biological insights</h4>
                 <ul class="portfolio-meta">
-                    <li><strong>Journal:</strong> Example Journal</li>
-                    <li><strong>Year:</strong> 2024</li>
-                    <li><strong>Role:</strong> Lead Designer</li>
+                    <li><strong>Company:</strong> Genentech</li>
+                    <li><strong>Year:</strong> 2023 - Present</li>
+                    <li><strong>Role:</strong> Postdoctorate Scientist</li>
                 </ul>
                 <p class="portfolio-excerpt">
-                Designed the visual system for the microfluidic workflow and created the graphical abstract to
-                communicate assay setup, readout, and QC at a glance. Emphasis on reproducibility and data mapping.
+                • Built an LLM-assisted annotation system (Python/Jupyter) with automated quality control (Jaccard index scoring + LLM-as-a-judge) that halved manual review time and led to improved annotation scoring over iterations<br>
+• Led large-scale multi-modal analyses (RNA-seq/whole-exome sequencing + outcomes) using Cox proportional hazards / Kaplan-Meier (survival analysis) and multivariable models to identify factors associated with immunotherapy efficacy, contributing to a Cancer Cell article and poster presentations at ESMO Asia and AACR TII<br>
+• Performed unsupervised clustering (e.g. NMF) on IMpower133 whole-exome sequencing and SKYSCRAPER-02 bulk RNA-seq data to test associations between genomic features and clinical outcomes<br>
+• Served as the lead computational analyst for cross-functional collaborations leveraging IMpower133 biomarker data with the NCI, Stanford, MD Anderson, and UW, co-authoring 3 peer-reviewed papers<br>
+• Contributed SCLC biology subject-matter expertise across multiple departments within gRED (Translational Medicine – Oncology, Computational CoE, and Cell and Tissue Genomics departments)<br>
+• Drove single-cell analysis of ~400K myeloid cells (from 9 publicly available data sources) across lung malignancies to characterize disease-specific phenotypes, contributing insights to internal sub-teams
                 </p>
                 <div class="portfolio-actions">
-                    <a class="btn btn-paper" href="https://www.behance.net/" target="_blank" rel="noopener">Read the paper</a>
-                    <a class="btn btn-paper" href="https://www.behance.net/" target="_blank" rel="noopener">Read the paper</a>
-                    <a class="btn btn-paper" href="https://www.behance.net/" target="_blank" rel="noopener">Read the paper</a>
+                    <a class="btn btn-paper" href="https://www.science.org/doi/full/10.1126/sciadv.adq7084" target="_blank" rel="noopener">Science Advances 2025</a>
+                    <a class="btn btn-paper" href="https://link.springer.com/article/10.1186/s12943-025-02291-0" target="_blank" rel="noopener">Molecular Cancer 2025</a>
+                    <a class="btn btn-paper" href="https://www.cell.com/cancer-cell/fulltext/S1535-6108(24)00015-1" target="_blank" rel="noopener">Cancer Cell 2024</a>
                 </div>
             </div>
         </article>
