Added details for UC Davis mentoring program

--- a/index.html
+++ b/index.html
@@ -500,6 +500,7 @@
                     </p>
                 </div>
                 <p>
+                <li>Consuelo Mendoza Hernandez (January 2025 - March 2025; Undergrad), Becoming a Latino Scientist Seminar Course (UC Davis/Genentech)</li>
                 <li>Sevahn Vorperian (October 2024 - Present; Postdoc), Postdoc Peer Mentoring Program at Genentech</li>
                 <li>Andrew Hong (September 2023 - Present; MD/PhD), Korean American Society in Biotech and Pharmaceuticals (KASBP) Mentorship Program</li>
                 <li>Ricardo Mack (October 2019 - June 2020; PhD), Stanford Biosciences Student Association (SBSA) First-Year Mentorship Program</li>
